Json Web Token Eklendi

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "TokenOptions": {
+    "Audince": "yahya@yahya.com",
+    "Issuer": "yahya@yahya.com",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "mysupersecretkeymysupersecretkey"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
