Json Web Token Eklendi

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,10 +1,14 @@
 {
+  //Buraya wepapi ayarlarýmýzý yapýyoruz. 
+  //Jwt þablonunda olmazsa olmaz alanlar vardýr. onlar bizim kanýtýmýzdýr.
   "TokenOptions": {
-    "Audince": "yahya@yahya.com",
-    "Issuer": "yahya@yahya.com",
-    "AccessTokenExpiration": 10,
-    "SecurityKey": "mysupersecretkeymysupersecretkey"
+    "Audince": "yahya@yahya.com", //Kitle
+    "Issuer": "yahya@yahya.com", //
+    "AccessTokenExpiration": 10, // Token geçerlilik süresini veririz.
+    "SecurityKey": "mysupersecretkeymysupersecretkey" //Paralomýz analamýna gelir.
   },
+
+  //Buradaki her bir bölüm Section anlamýna gelmektedir.
 
   "Logging": {
     "LogLevel": {
