Cache, Transaction ve Performance aspectleri eklendi.

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -2,7 +2,7 @@
   //Buraya wepapi ayarlarýmýzý yapýyoruz. 
   //Jwt þablonunda olmazsa olmaz alanlar vardýr. onlar bizim kanýtýmýzdýr.
   "TokenOptions": {
-    "Audince": "yahya@yahya.com", //Kitle
+    "Audience": "yahya@yahya.com", //Kitle
     "Issuer": "yahya@yahya.com", //
     "AccessTokenExpiration": 10, // Token geçerlilik süresini veririz.
     "SecurityKey": "mysupersecretkeymysupersecretkey" //Paralomýz analamýna gelir.
